@@ -13,6 +13,7 @@
 #include "gdcmObject.h"
 #include "gdcmDicomDir.h"
 #include "gdcmDicomDirElement.h"
+#include "gdcmMeta.h"
 #include "gdcmPatient.h"
 #include "gdcmStudy.h"
 #include "gdcmSerie.h"
@@ -204,6 +205,7 @@ extern gdcmGlobal gdcmGlob;
 %include "gdcmObject.h"
 %include "gdcmDicomDir.h"
 %include "gdcmDicomDirElement.h"
+%include "gdcmMeta.h"
 %include "gdcmPatient.h"
 %include "gdcmStudy.h"
 %include "gdcmSerie.h"
