@@ -101,10 +101,11 @@ void gdcmDirList::Explore(std::string dirName,bool recursive)
    while( (hFile!=INVALID_HANDLE_VALUE) && (found) )
    {
       fileName=fileData.cFileName;
+      std::cout<<fileName<<std::endl;
       if(fileData.dwFileAttributes&FILE_ATTRIBUTE_DIRECTORY)
       {
          if( (fileName!=".") && (fileName!="..") && (recursive) )
-            Explore(dirName+fileName);
+            Explore(dirName+fileName,recursive);
       }
       else
       {
@@ -124,7 +125,7 @@ void gdcmDirList::Explore(std::string dirName,bool recursive)
       if(namelist[i]->d_type==DT_DIR)
       {
          if( (fileName!=".") && (fileName!="..") && (recursive) )
-            Explore(dirName+fileName);
+            Explore(dirName+fileName,recursive);
       }
       else
       {
